--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Smart Collaboration : Another Fine Summer Project by the MIT Human Dynamics Lab Computational Law Research and Development">
+    <meta name="description" content="Community Collaboration : Online Hackathons ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/ConnectionScience/hangout-collaboration-scoring">View on GitHub</a>
 
           <h1 id="project_title">Smart Collaboration</h1>
-          <h2 id="project_tagline">Computational Law & Civic Hacking Community Collaboration Project: <br> MIT Human Dynamics Lab Computational Law Research and Development</h2>
+          <h2 id="project_tagline">An Open Civic Hacking Project</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/ConnectionScience/hangout-collaboration-scoring/zipball/master">Download this project as a .zip file</a>
@@ -31,6 +31,13 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+        
+        The description below pertains to:
+        <p>
+          
+        </p> Computational Law & Civic Hacking Community Collaboration <br>
+        Summer 2015 Open Innovation Project <br> MIT Human Dynamics Lab, Computational Law Research and Development Team
+        <hr>
         <h2>
 <a id="goal" class="anchor" href="#goal" aria-hidden="true"><span class="octicon octicon-link"></span></a>Goal</h2>
 
